added jQuery and html
jQuery and html

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,15 @@ in your index.html and script.js files. */
 .chart {
   height: 500px;
 }
+
+.amount {
+  text-align: right;
+}
+
+.align {
+  text-align: left;
+}
+
+.meta {
+  padding-bottom: 5px;
+}
